odin/uv/uv.odin

            
                                     EXTERN char** uv_setup_args(int argc, char** argv);
                                     UV_EXTERN int uv_get_process_title(buffer: cstring size_t size);
                                     UV_EXTERN int uv_set_process_title(const char* title);
                                     UV_EXTERN int uv_resident_set_memory(size_t* rss);
                                     UV_EXTERN int uv_uptime(double* uptime);
                                     UV_EXTERN uv_os_fd_t uv_get_osfhandle(int fd);
                                     UV_EXTERN int uv_open_osfhandle(uv_os_fd_t os_fd);
     int uv_fs_opendir(loop: Loop,
                               req: Fs,
                                path: cstring,
                                cb: uv_fs_cb);
     int uv_fs_readdir(loop: Loop,
                               req: Fs,
                                dir :Dir,
                                cb: uv_fs_cb);
     int uv_fs_closedir(loop: Loop,
                                req: Fs,
                                 dir :Dir,
                                 cb: uv_fs_cb);
     int uv_fs_stat(loop: Loop,
                            req: Fs,
                             path: cstring,
                             cb: uv_fs_cb);
     int uv_fs_fstat(loop: Loop,
                             req: Fs,
                              file: File,
                              cb: uv_fs_cb);
     int uv_fs_rename(loop: Loop,
                              req: Fs,
                               path: cstring,
                               new_path: cstring,
                               cb: uv_fs_cb);
     int uv_fs_fsync(loop: Loop,
                             req: Fs,
                              file: File,
                              cb: uv_fs_cb);
     int uv_fs_fdatasync(loop: Loop,
                                 req: Fs,
                                  file: File,
                                  cb: uv_fs_cb);
     int uv_fs_ftruncate(loop: Loop,
                                 req: Fs,
                                  file: File,
                                  offset: c.int64_t,
                                  cb: uv_fs_cb);
     int uv_fs_sendfile(loop: Loop,
                                req: Fs,
                                 out_fd: File,
                                 in_fd: File,
                                 int64_t in_offset,
                                 length: c.size_t,
                                 cb: uv_fs_cb);
     int uv_fs_access(loop: Loop,
                              req: Fs,
                               path: cstring,
                               int mode,
                               cb: uv_fs_cb);
     int uv_fs_chmod(loop: Loop,
                             req: Fs,
                              path: cstring,
                              int mode,
                              cb: uv_fs_cb);
     int uv_fs_utime(loop: Loop,
                             req: Fs,
                              path: cstring,
                              double atime,
                              double mtime,
                              cb: uv_fs_cb);
     int uv_fs_futime(loop: Loop,
                              req: Fs,
                               file: File,
                               double atime,
                               double mtime,
                               cb: uv_fs_cb);
     int uv_fs_lutime(loop: Loop,
                              req: Fs,
                               path: cstring,
                               double atime,
                               double mtime,
                               cb: uv_fs_cb);
     int uv_fs_lstat(loop: Loop,
                             req: Fs,
                              path: cstring,
                              cb: uv_fs_cb);
     int uv_fs_link(loop: Loop,
                            req: Fs,
                             path: cstring,
                             new_path: cstring,
                             cb: uv_fs_cb);
     int uv_fs_symlink(loop: Loop,
                               req: Fs,
                                path: cstring,
                                new_path: cstring,
                                flags: c.int
                                cb: uv_fs_cb);
     int uv_fs_readlink(loop: Loop,
                                req: Fs,
                                 path: cstring,
                                 cb: uv_fs_cb);
     int uv_fs_realpath(loop: Loop,
                                req: Fs,
                                 path: cstring,
                                 cb: uv_fs_cb);
     int uv_fs_fchmod(loop: Loop,
                              req: Fs,
                               file: File,
                               int mode,
                               cb: uv_fs_cb);
     int uv_fs_chown(loop: Loop,
                             req: Fs,
                              path: cstring,
                              uv_uid_t uid,
                              uv_gid_t gid,
                              cb: uv_fs_cb);
     int uv_fs_fchown(loop: Loop,
                              req: Fs,
                               file: File,
                               uv_uid_t uid,
                               uv_gid_t gid,
                               cb: uv_fs_cb);
     int uv_fs_lchown(loop: Loop,
                              req: Fs,
                               path: cstring,
                               uv_uid_t uid,
                               uv_gid_t gid,
                               cb: uv_fs_cb);
     int uv_fs_statfs(loop: Loop,
                              req: Fs,
                               path: cstring,
                               cb: uv_fs_cb);
     int uv_fs_poll_init(loop: Loop, handle: ^Poll);
     int uv_fs_poll_start(handle: ^Poll,
                                   uv_fs_poll_cb poll_cb,
                                   path: cstring,
                                   unsigned int interval);
     int uv_fs_poll_stop(handle: ^Poll);
     @(link_name="uv_fs_poll_getpath") fs_poll_getpath( handle: ^Poll,
                                     buffer: cstring,
                                     size: c.size_t) -> i32 ---
    @(link_name="uv_fs_event_init") fs_event_init ::proc(loop: Loop, handle: ^FsEvent) -> i32---
     int uv_fs_event_start(handle: ^FsEvent,
                                    uv_fs_event_cb cb,
                                    path: cstring,
                                    unsigned flags:c.int);
     int uv_fs_event_stop(handle: ^FsEvent);
     int uv_fs_event_getpath(handle: ^FsEvent,
                                      buffer: cstring
                                      size: c.size_t);
    
     int uv_ip4_addr(ip: cstring, port: c.int, struct sockaddr_in* addr);
     int uv_ip6_addr(ip: cstring, port: c.int, struct sockaddr_in6* addr);
    
     int uv_ip4_name(const struct sockaddr_in* src, char* dst, size_t size);
     int uv_ip6_name(const struct sockaddr_in6* src, char* dst, size_t size);
     int uv_ip_name(const struct sockaddr* src, char* dst, size_t size);
    
     int uv_inet_ntop(int af, const void* src, char* dst, size_t size);
     int uv_inet_pton(int af, const char* src, void* dst);

    
     int uv_random(loop: Loop,
                            uv_random_t* req,
                            buf: rawptr,
                            size_t buflen,
                            unsigned flags,  /* For future extension; must be 0. */
                            uv_random_cb cb);
   
    
    @(link_name="uv_if_indextoiid")   int uv_thread_create_ex( tid :^Thread,
                                       params,
                                      uv_thread_cb entry,
                                      arg: rawptr);
     @(link_name="uv_if_indextoiid")  int uv_thread_setaffinity(uv_thread_t* tid,
                                        char* cpumask,
                                        char* oldmask,
                                        size_t mask_size);
    @(link_name="uv_if_indextoiid")   int uv_thread_getaffinity(uv_thread_t* tid,
                                        char* cpumask,
                                        size_t mask_size);
   @(link_name="uv_if_indextoiid")     uv_thread_getcpu() -> c.int ---
    @(link_name="uv_if_indextoiid")   uv_thread_t uv_thread_self();
     @(link_name="uv_if_indextoiid")  int uv_thread_join(uv_thread_t *tid);
     @(link_name="uv_if_indextoiid")  int uv_thread_equal(const uv_thread_t* t1, const uv_thread_t* t2);
     @(link_name="uv_if_indextoiid")  int uv_thread_setname(name: cstring);
     @(link_name="uv_if_indextoiid")  int uv_thread_getname(uv_thread_t* tid, char* name, size_t size);
}

